--- a/atalk/index.html
+++ b/atalk/index.html
@@ -94,6 +94,7 @@
       <li>XEP-0178: Use of SASL EXTERNAL with TLS Certificates for client authentication</li>
       <li>XEP-0184: Message Delivery Receipts with user enable/disable option</li>
       <li>XEP-0251: Jingle Session Transfer: Support both Unattended and Attended call transfer</li>
+      <li>XEP-0313: Message Archive Management</li>
       <li>XEP-0391: Jingle Encrypted Transports for OMEMO encrypted media file sharing</li>
       <li>Implement call waiting to accept a second incoming call by placing the in-progress call on hold; and allow switching between calls</li>
       <li>Implement Jabber VoIP-PBX gateway Telephony, allowing PBX phone call via service gateway</li>
